# learn-caffe

./: .gitignore
caffe-windows/: CMakeLists.txt
caffe-windows/cmake/: Cuda.cmake
caffe-windows/examples/: CMakeLists.txt  pascal-multilabel-with-datalayer.ipynb
caffe-windows/examples/cifar10/: cifar10_full_solver.prototxt  cifar10_full_train_test.prototxt  convert_cifar_data.cpp  train_quick.bat
caffe-windows/examples/cifar10/cifar10_full/: cifar10.txt  meter_simple_cifar10.txt
caffe-windows/examples/cpp_classification/: classification.cpp
caffe-windows/examples/mnist/: convert_mnist_data.cpp  create_mnist.bat  datatest.txt  datatrain.txt  lenet_deploy.prototxt  lenet_solver.prototxt  lenet_train_test.prototxt  train_lenet.bat
caffe-windows/examples/siamese/: convert_mnist_siamese_data.cpp
caffe-windows/include/caffe/: blob.hpp  layer.hpp  layer_factory.hpp  net.hpp  solver.hpp  solver_factory.hpp
caffe-windows/include/caffe/layers/: absval_layer.hpp  accuracy_layer.hpp  argmax_layer.hpp  base_conv_layer.hpp  base_data_layer.hpp  conv_layer.hpp  input_layer.hpp  python_layer.hpp
caffe-windows/include/caffe/util/: device_alternate.hpp
caffe-windows/python/caffe/: _caffe.cpp
caffe-windows/scripts/: build_win.cmd  build_win_中文注释版.cmd
caffe-windows/src/caffe/: blob.cpp  common.cpp  layer_factory.cpp  net.cpp  solver.cpp  solver_factory.cpp
caffe-windows/src/caffe/layers/: base_conv_layer.cpp  conv_layer.cpp  cudnn_conv_layer.cpp
caffe-windows/src/caffe/solvers/: sgd_solver.cpp
caffe-windows/src/caffe/util/: im2col.cpp  io.cpp  math_functions.cpp  signal_handler.cpp  upgrade_proto.cpp
caffe-windows/tools/: caffe.cpp  compute_image_mean.cpp  convert_imageset.cpp  extract_features.cpp  upgrade_net_proto_binary.cpp  upgrade_net_proto_text.cpp  upgrade_solver_proto_text.cpp
